# samurai-onnxruntime

./: .gitignore  README.md
c++/: CMakeLists.txt  main_onnx.cpp  tracker_pipeline.cpp  tracker_thread_onnx.cpp
c++/include/: bounded_thread_safe_queue.hpp  sam2_tracker.h
c++/src/: sam2_tracker.cpp
cpp/include/: sam2_tracker_pipeline.h  thread_pool.hpp
cpp/src/: sam2_tracker_pipeline.cpp
python/: main.py
